# Fantasy-Premier-League-Optimization

./: README.md  optimized_squad.json  pyproject.toml  report.md  report.md.ipynd
artifacts/: fixtures.md  optimized_squad.json  player_watchlist.md
data/: bootstrap-static.json  fixtures.json
data/cache/: bootstrap-static.json  fixtures.json  report.md
src/: main.py
src/fantasy_premier_league_optimization/: crew.py  main.py
src/fantasy_premier_league_optimization/config/: agents.yaml  tasks.yaml
src/fantasy_premier_league_optimization/fpl/: __init__.py  api.py  fixtures.py  optimizer.py  scoring.py
src/fantasy_premier_league_optimization/tools/: __init__.py  fetch_url_tool.py  fpl_fixture_outlook_tool.py  fpl_generate_report_tool.py  fpl_optimize_squad_tool.py  fpl_player_watchlist_tool.py
tests/: test_optimizer.py
