[project]
name = "fantasy_premier_league_optimization"
version = "0.1.0"
description = "Fantasy_Premier_League_Optimization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "pulp>=2.8.0",
    "python-dotenv>=1.0.1"
]

[project.scripts]
fantasy_premier_league_optimization = "fantasy_premier_league_optimization.main:run"
run_crew = "fantasy_premier_league_optimization.main:run"
train = "fantasy_premier_league_optimization.main:train"
replay = "fantasy_premier_league_optimization.main:replay"
test = "fantasy_premier_league_optimization.main:test"
run_with_trigger = "fantasy_premier_league_optimization.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
